Rajout année affichage et modification chat

--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -47,7 +47,7 @@
                                 <!-------- L'âge renseigné ou non -------->
                                 <div class="col p-1">
                                     {% if profil.age is not null %}
-                                        Age <span class="txt">:</span> {{ profil.age }}
+                                        Age <span class="txt">:</span> {{ profil.age }} ans
                                     {% else %}
                                         Age <span class="txt">:</span> Non renseigné
                                     {% endif %}
