--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -4,8 +4,16 @@
 
 {% block body %}
 
-	<h3>Bienvenue sur le chat {{ app.user }}</h3>
+<div class="container-fluid">
 
+	<!-------- Titre profil -------->
+	<div class="row">
+		<div class="col text-center mb-5 mt-5">
+			<h1> Bienvenue sur le chat général {{ app.user }} ! </h1>
+		</div>
+	</div>
+
+	<!-------- Envoyer votre message -------->
 	<input type="text" id="message">
 
 	<button id="envoi">Envoyez votre message !</button><br>
@@ -14,7 +22,8 @@
 	<div id="messages"></div>
 
 
-
+</div>
+	<!-------- Fin container -------->
 {% endblock %}
 
 {% block javascripts %}
