--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -90,7 +90,7 @@
             <!-------- Col gauche -------->
             <!--            A propos -->
             <div class="col col-xl-7 ml-4 mr-2">
-                <h2>Le concept</h2>
+                <h2 class="police1">Le concept</h2>
                 <br>
                 <p>Filmami est une plateforme qui permet de vous mettre en relation avec des personnes près de chez
                     vous, ayant les mêmes goûts que vous en matière de film.</p>
@@ -106,7 +106,7 @@
                 <hr>
 
                 <!--- Qui sommes nous---->
-                <h3>Qui sommes nous ?</h3>
+                <h3 class="police1">Qui sommes nous ?</h3>
                 <br>
                 <p>Nous sommes une PME dont le siège social est situé à Paris, toute récente. </p>
                 <p>Filmami a pu naitre grâce à notre intérêt à la fois pour le cinéma mais aussi pour le partage !</p>
@@ -121,7 +121,8 @@
             <!-------- Col droite -------->
             <div class="col col-xl-4">
                 <div class="row d-flex justify-content-center">
-                    <h4>Pas encore membre?</h4>
+                    <h4>Pas encore membre?</h4> <br>
+                    <span class="police double">Inscrivez-vous maintenant!</span>
                     <div class="col-10 border rounded border-grey p-4 text-center mb-5">
 
                         <!--          Formulaire d'inscription -->
