--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -134,7 +134,7 @@
                         <div class="col p-1">{{ form_row(form.mdpClair) }}</div>
                         <br>
 
-                        <button type="submit" class="btn btn-dark col-md-8 p-1" id="boutoninscription">
+                        <button title="C'est gratuit, profitez-en !" type="submit" class="btn btn-dark col-md-8 p-1" id="boutoninscription">
                             Inscription
                         </button>
 
