--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,12 +48,11 @@
                     <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
                 </div>
                 <div>
-{#
-                    <button title="Discutez en direct avec les autres membres connectés!" class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('/chat/index') }}">Chattez en ligne!</a></button>
-#}
+                    <button title="Discutez en direct avec les autres membres connectés!" class="nav-item btn btn-outline-dark my-2 my-sm-0"
+                     type="submit"><a href="{{ path('app_chat_index') }}">Chattez en ligne!</a></button>
                 </div>
                 <div>
-                    <button title="Quitter l'espace membres" class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
+                    <button title="Quitter l'espace membres" class="nav-item col-xs btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
                 </div>
             </div>
         </div>
@@ -86,9 +85,8 @@
                     <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
                 </div>
                 <div>
-{#
-                    <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('/chat/index') }}">Chattez en ligne!</a></button>
-#}
+                    <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit">
+                    <a href="{{ path('app_chat_index') }}">Chattez en ligne!</a></button>
                 </div>
                 <div>
                     <button title="Quitter l'espace membres" class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
@@ -125,12 +123,13 @@
     <footer>
         <span>Nos réseaux sociaux :</span>
         <div class="row">
-            <a href="https://twitter.com/"><img src="{{ asset('img/logo_twitter.png') }}" alt=""></a>
-            <a href="https://www.instagram.com/"><img src="{{ asset('img/logo_instagram.png') }}" alt=""></a>
-            <a href="https://www.facebook.com/"><img src="{{ asset('img/logo_facebook.png') }}" alt=""></a>
+            <a title="Visitez notre page Twitter" href="https://twitter.com/"><img src="{{ asset('img/logo_twitter.png') }}" alt=""></a>
+            <a title="Visitez notre page Instagram" href="https://www.instagram.com/"><img src="{{ asset('img/logo_instagram.png') }}" alt=""></a>
+            <a title="Visitez notre page Facebook" href="https://www.facebook.com/"><img src="{{ asset('img/logo_facebook.png') }}" alt=""></a>
         </div>
-        <span><a class="double" href="{{ path('app_index_contact') }}">Contactez-nous !</a></span>
-
+        <hr>
+        <span><a title="Envoyez-nous un message !" class="double" href="{{ path('app_index_contact') }}">Contactez-nous !</a></span>
+        <hr>
         <span> Copyright &copy;Filmami 2020</span>
     </footer>
 
