--- a/templates/chat/affichage.html.twig
+++ b/templates/chat/affichage.html.twig
@@ -1,10 +1,12 @@
 <div id="messages">
     {% for message in messages %}
         <div class="card bg-light mb-3 p-2">
-            Par {{ message.auteur }}
-            <div class="text-muted">Le {{ message.datePublication|date('d/m/Y H:i') }}</div>
-            {{ message.message }}
-            <input type="hidden" name="id" value="{{ message.id }}">
+            <div class="col" id="messageauteur">Par {{ message.auteur }}</div>
+            <div class="col">
+                <div class="text-muted">Le {{ message.datePublication|date('d/m/Y H:i') }}</div>
+                {{ message.message }}
+            </div>
+            <div class="col"><input type="hidden" name="id" value="{{ message.id }}"></div>
         </div>
     {% endfor %}
 </div>
