--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -24,6 +24,8 @@
 	<script>
 		$(document).ready(function () {
 
+			$('#messages').html("<img src='img/ajax-loader.gif'>");
+
 			$('#envoi').click(function (e) {
 				e.preventDefault(); // on empêche le bouton d'envoyer le formulaire
 
@@ -37,7 +39,7 @@
 						data: {message: message}, // et on envoie nos données
 					});
 
-					$('#messages').prepend("<p>" + pseudo + " dit maintenant : " + message + "</p>"); // on ajoute le message dans la zone prévue
+					$('#messages').prepend("<p>" + pseudo + " dit maintenant : " + message + "</p>");// on ajoute le message dans la zone prévue
 
 				} else {
 
