--- a/templates/chat/affichage.html.twig
+++ b/templates/chat/affichage.html.twig
@@ -1,14 +1,18 @@
 <div id="messages">
     {% for message in messages %}
         <div class="card bg-light mb-3 p-2">
-            Par
-            {% if message.auteur == app.user %}
-                moi
-            {% else %}
-                {{ message.auteur }}
-            {% endif %}
-            <div class="text-muted">Le {{ message.datePublication|date('d/m/Y H:i') }}</div>
-            {{ message.message }}
+            <div class="col" id="messageauteur">
+                Par
+                {% if message.auteur == app.user %}
+                    moi
+                {% else %}
+                    {{ message.auteur }}
+                {% endif %}
+            </div>
+            <div class="col">
+                <div class="text-muted">Le {{ message.datePublication|date('d/m/Y H:i') }}</div>
+                {{ message.message }}
+            </div>
         </div>
     {% endfor %}
 </div>
