--- a/templates/admin/genre/index.html.twig
+++ b/templates/admin/genre/index.html.twig
@@ -5,7 +5,7 @@
     <div class="main">
 
         <div class="tableau col-md-12">
-            <h1>Gestion des Genres de Film</h1>
+            <h1 class="mt">Gestion des Genres de Film</h1>
 
             {{ form_start(form) }}
 
