--- a/templates/index/contact.html.twig
+++ b/templates/index/contact.html.twig
@@ -9,7 +9,7 @@
 {% block body %}
 
     <div class="container">
-        <h1>Contactez-nous ! </h1>
+        <h1 class="mt">Contactez-nous ! </h1>
         <h3>Nous vous répondrons rapidement</h3><br>
         <hr>
 
