--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -33,7 +33,7 @@
 
 
                 <!-------- Formulaire de connexion -------->
-                <form class="form-inline" action="{{ path('app_index_connexion') }}" method="post">
+                <form class="form-inline mb" action="{{ path('app_index_connexion') }}" method="post">
                     <div class="form-group mr-3">Déjà membre ?</div>
                     <div class="form-group mr-3 mb-2">
                         <label for="inputPassword2" class="sr-only">Email</label>
