Chat avec loader fond gris

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -45,7 +45,7 @@
                         <input type="password" class="form-control" name="_password" placeholder="Mot de Passe"
                                id="mdpco">
                     </div>
-                    <input type="hidden" name="_target_path" value="{{ path('app_suggestion_index') }}">
+{#                    <input type="hidden" name="_target_path" value="{{ path('app_suggestion_index') }}">#}
                     <button type="submit" class="btn btn-dark mb-2" id="btnco">Se connecter</button>
                 </form>
             </div>
