--- a/templates/plusdesuggestions/index.html.twig
+++ b/templates/plusdesuggestions/index.html.twig
@@ -13,7 +13,7 @@
 
                 <!-------- Si pas d'image placeholder par défault: -------->
             {% else %}
-                <img class="img-thumbnail" src="{{ asset('img/placeholder2_25_1.jpg') }}" alt="">
+                <img class="card-img-top" src="{{ asset('img/placeholder2_25_1.jpg') }}" alt="">
 
             {% endif %}
             <div class="card-body">
