--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -36,11 +36,11 @@
                     {% for suggestion in suggestions %}
                         <div class="card centrez" style="width: 18rem;">
                             {% if suggestion.image is not null %}
-                                <img class="card-img-top" src="{{ asset('images/' ~ suggestion.image) }}">
+                                <img class="taille_img card-img-top" src="{{ asset('images/' ~ suggestion.image) }}">
 
                                 <!-------- Si pas d'image placeholder par défault: -------->
                             {% else %}
-                                <img class="img-thumbnail" src="{{ asset('img/placeholder2_25_1.jpg') }}" alt="">
+                                <img class="taille_img card-img-top" src="{{ asset('img/placeholder2_25_1.jpg') }}" alt="">
 
                             {% endif %}
                             <div class="card-body">
