--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -27,30 +27,30 @@
         <!-------- Fin bannière -------->
 
         <!-------------------------- HEADER --------------------------------------->
-        {% if app.user is null  %}
-        <div class="row d-flex  mt-3 mr-4 " id="login">
-            <div class="col d-flex justify-content-center">
+        {% if app.user is null %}
+            <div class="row d-flex  mt-3 mr-4 " id="login">
+                <div class="col d-flex justify-content-center">
 
 
-                <!-------- Formulaire de connexion -------->
-                <form class="form-inline mb" action="{{ path('app_index_connexion') }}" method="post">
-                    <div class="form-group mr-3">Déjà membre ?</div>
-                    <div class="form-group mr-3 mb-2">
-                        <label for="inputPassword2" class="sr-only">Email</label>
-                        <input type="email" class="form-control" name="_username" value="" placeholder="Email"
-                               id="emailco">
-                    </div>
-                    <div class="form-group mr-3 mb-2">
-                        <label for="inputPassword2" class="sr-only">Mot de Passe</label>
-                        <input type="password" class="form-control" name="_password" placeholder="Mot de Passe"
-                               id="mdpco">
-                    </div>
-                    <input type="hidden" name="_target_path" value="{{ path('app_suggestion_index') }}">
-                    <button type="submit" class="btn btn-dark mb-2" id="btnco">Se connecter</button>
-                </form>
+                    <!-------- Formulaire de connexion -------->
+                    <form class="form-inline mb" action="{{ path('app_index_connexion') }}" method="post">
+                        <div class="form-group mr-3">Déjà membre ?</div>
+                        <div class="form-group mr-3 mb-2">
+                            <label for="inputPassword2" class="sr-only">Email</label>
+                            <input type="email" class="form-control" name="_username" value="" placeholder="Email"
+                                   id="emailco">
+                        </div>
+                        <div class="form-group mr-3 mb-2">
+                            <label for="inputPassword2" class="sr-only">Mot de Passe</label>
+                            <input type="password" class="form-control" name="_password" placeholder="Mot de Passe"
+                                   id="mdpco">
+                        </div>
+                        <input type="hidden" name="_target_path" value="{{ path('app_suggestion_index') }}">
+                        <button type="submit" class="btn btn-dark mb-2" id="btnco">Se connecter</button>
+                    </form>
+                </div>
             </div>
-        </div>
-        <!-------- Fin formulaire de connexion -------->
+            <!-------- Fin formulaire de connexion -------->
         {% else %}
 
         {% endif %}
@@ -93,14 +93,18 @@
                 <h2 class="police1">Le concept</h2>
                 <br>
                 <p>Filmami est une plateforme qui permet de vous mettre en relation avec des personnes près de chez
-                    vous, ayant les mêmes goûts que vous en matière de film.</p>
-                <p>Tous les jours votre page de match vous proposera de nouveaux profils, séléctionnés juste pour
+                    vous, ayant les mêmes goûts que vous en matière de film.
+                    Tous les jours votre page de match vous proposera de nouveaux profils, séléctionnés juste pour
                     vous,
                     selon vos goûts cinématographiques. </p>
+                <h5>Le cinéma, notre passion !</h5>
                 <p>Si vous êtes accro aux films d'actions, vous aurez la possibilité d'en parler avec quelqu'un
-                    d'aussi
-                    passioné que vous!</p>
-                <p>Créez vous de nouvelles amitiés autour de votre passion et ne soyez jamais seul au cinéma grâce à
+                    d'aussi passioné que vous! Créez vous de nouvelles amitiés autour de votre passion et ne soyez
+                    jamais seul au cinéma grâce à
+                    Filmami ! Si vous êtes accro aux films d'actions, vous aurez la possibilité d'en parler avec
+                    quelqu'un
+                    d'aussi passioné que vous! Créez vous de nouvelles amitiés autour de votre passion et ne soyez
+                    jamais seul au cinéma grâce à
                     Filmami !</p>
                 <br>
                 <hr>
@@ -108,12 +112,25 @@
                 <!--- Qui sommes nous---->
                 <h3 class="police1">Qui sommes nous ?</h3>
                 <br>
-                <p>Nous sommes une PME dont le siège social est situé à Paris, toute récente. </p>
-                <p>Filmami a pu naitre grâce à notre intérêt à la fois pour le cinéma mais aussi pour le partage !</p>
-                <p>Notre objectif ? Que tous les fans de cinema puissent se retrouver sur une plateforme pour partager
-                    leur passion commune.</p>
-                <p>N'hésitez pas à nous contacter pour toute demande d'informations supplémentaires.</p>
+                <p>Nous sommes une PME dont le siège social est situé à Paris, toute récente.
+                    Filmami a pu naitre grâce à notre intérêt à la fois pour le cinéma mais aussi pour le partage !
+                    Notre objectif ? Que tous les fans de cinema puissent se retrouver sur une plateforme pour partager
+                    leur passion commune. Et voili voilou.
+                    N'hésitez pas à nous contacter pour toute demande d'informations supplémentaires.</p>
                 <br>
+                <h5>Une association progressiste et soucieuse de l'envirronement !</h5>
+                <p>Nous sommes une PME dont le siège social est situé à Paris, toute récente.
+                    Filmami a pu naitre grâce à notre intérêt à la fois pour le cinéma mais aussi pour le partage !
+                    Notre objectif ? Que tous les fans de cinema puissent se retrouver sur une plateforme pour partager
+                    leur passion commune.
+                    N'hésitez pas à nous contacter pour toute demande d'informations supplémentaires.</p>
+                <h5>Une implantation de proximité</h5>
+                <p>Nous sommes une PME dont le siège social est situé à Paris, toute récente.
+                    Filmami a pu naitre grâce à notre intérêt à la fois pour le cinéma mais aussi pour le partage !
+                    Notre objectif ? Que tous les fans de cinema puissent se retrouver sur une plateforme pour partager
+                    leur passion commune.
+                    N'hésitez pas à nous contacter pour toute demande d'informations supplémentaires.
+                Sur ce c'est pas tout ça mais ...</p>
             </div>
 
             <hr class="responsive">
@@ -134,7 +151,8 @@
                         <div class="col p-1">{{ form_row(form.mdpClair) }}</div>
                         <br>
 
-                        <button title="C'est gratuit, profitez-en !" type="submit" class="btn btn-dark col-md-8 p-1" id="boutoninscription">
+                        <button title="C'est gratuit, profitez-en !" type="submit" class="btn btn-dark col-md-8 p-1"
+                                id="boutoninscription">
                             Inscription
                         </button>
 
