--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -23,7 +23,7 @@
 			<div class="col mb-4"><h4>Mon message :</h4></div>
 			<div class="col"><label for="message"></label></div>
 			<textarea class="col mb-3" id="message" name="message" rows="4" cols="60"></textarea>
-			<div class="col mb-4"><button id="envoi">Envoyez mon message </button></div>
+			<div class="col mb-4 btn btn-dark" id="envoi">Envoyez mon message</div>
 		</div>
 
 
