--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -61,13 +61,13 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="{{ asset('img/sallerouge4.jpg') }}" alt="First slide">
+                            <img class="d-block w-100" src="{{ asset('img/sallerouge4.jpg') }}" alt="Première image carousel">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ asset('img/img1carousel.jpg') }}" alt="Second slide">
+                            <img class="d-block w-100" src="{{ asset('img/img1carousel.jpg') }}" alt="Deuxième image carousel">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ asset('img/img2carousel.jpg') }}" alt="Third slide">
+                            <img class="d-block w-100" src="{{ asset('img/img2carousel.jpg') }}" alt="Troisième image carousel">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
