--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -123,14 +123,20 @@
                     Filmami a pu naitre grâce à notre intérêt à la fois pour le cinéma mais aussi pour le partage !
                     Notre objectif ? Que tous les fans de cinema puissent se retrouver sur une plateforme pour partager
                     leur passion commune.
-                    N'hésitez pas à nous contacter pour toute demande d'informations supplémentaires.</p>
+                    N'hésitez pas à nous contacter pour toute demande d'informations supplémentaires.Nous sommes une PME dont le siège
+                    social est situé à Paris, toute récente.
+                    Filmami a pu naitre grâce à notre intérêt à la fois pour le cinéma mais aussi pour le partage !
+                    Notre objectif ? Que tous les fans de cinema puissent se retrouver sur une plateforme pour partager
+                    leur passion commune.</p>
                 <h5>Une implantation de proximité</h5>
                 <p>Nous sommes une PME dont le siège social est situé à Paris, toute récente.
                     Filmami a pu naitre grâce à notre intérêt à la fois pour le cinéma mais aussi pour le partage !
                     Notre objectif ? Que tous les fans de cinema puissent se retrouver sur une plateforme pour partager
                     leur passion commune.
                     N'hésitez pas à nous contacter pour toute demande d'informations supplémentaires.
-                Sur ce c'est pas tout ça mais ...</p>
+                Sur ce c'est pas tout ça mais ... N'hésitez pas à nous contacter pour toute demande d'informations supplémentaires.
+                    Nous sommes une PME dont le siège
+                    social est situé à Paris, toute récente.</p>
             </div>
 
             <hr class="responsive">
