--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -26,9 +26,33 @@
 
 @media (max-width: 768px) {
     #monmessage{
-        margin-right: 0px;
+        margin-right: 0;
     }
     #envoi{
-        margin-bottom: 20px;
+        margin-bottom: -10px;
+        margin-top: -10px;
+        height: 45px;
+        width: 220px;
+
+    }
+    #message{
+        height: 100px;
+    }
+    h1{
+        font-size: large;
+        margin-top: -20px;
+    }
+    h2{
+        font-size: medium;
+    }
+    h3{
+        margin-top: -20px;
+        font-size: small;
+        margin-bottom: -30px;
+    }
+    h4{
+        font-size: small;
+        margin-top: -10px;
+        margin-bottom: -10px;
     }
 }
