--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -124,9 +124,9 @@
         <hr>
         <span>Nos réseaux sociaux :</span>
         <div class="row">
-            <a title="Visitez notre page Twitter" href="https://twitter.com/"><img src="{{ asset('img/logo_twitter.png') }}" alt=""></a>
-            <a title="Visitez notre page Instagram" href="https://www.instagram.com/"><img src="{{ asset('img/logo_instagram.png') }}" alt=""></a>
-            <a title="Visitez notre page Facebook" href="https://www.facebook.com/"><img src="{{ asset('img/logo_facebook.png') }}" alt=""></a>
+            <a title="Visitez notre page Twitter" href="https://twitter.com/"><img src="{{ asset('img/logo_twitter.png') }}" alt="logo Twitter"></a>
+            <a title="Visitez notre page Instagram" href="https://www.instagram.com/"><img src="{{ asset('img/logo_instagram.png') }}" alt="logo Instagram"></a>
+            <a title="Visitez notre page Facebook" href="https://www.facebook.com/"><img src="{{ asset('img/logo_facebook.png') }}" alt="logo Facebook"></a>
         </div>
         <hr>
         <span> Copyright &copy;Filmami 2020</span>
