--- a/public/css/filmami_commun.css
+++ b/public/css/filmami_commun.css
@@ -6,12 +6,22 @@
 .nav-item {
     color: white;
 }
+.dropdown-item {
+    color: black !important;
+    font-weight: bold;
+}
 .navbar-expand-lg {
     padding: 8px 24px;
 }
 .navbar a {
     color: white;
 }
+
+.nav-link {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
 .form-control {
     border: 3px solid rgba(92, 114, 116, 0.55) !important;
 }
