--- a/templates/plusdesuggestions/index.html.twig
+++ b/templates/plusdesuggestions/index.html.twig
@@ -27,7 +27,7 @@
                     <span class="card-title">{{ suggestion.genre.type }}</span>
                 </tr>
                 <tr>
-                    <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
+                    <p class="card-text">{{ suggestion.info }}</p>
                 </tr>
                 <tr>
                     <a href="#" title="Visiter le profil de cette personne" class="btn btn-dark">Voir le profil</a>
