--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -21,7 +21,7 @@
         <!-------- Début carte profil -------->
         <div class="row justify-content-center">
             <div class="col-xs ">
-                <div class="row border border-dark rounded ml-5 mr-5 d-flex justify-content-center" id="profil">
+                <div class="row border border-dark rounded d-flex justify-content-center" id="profil">
                     <div class="col-xs">
                         <div class="row justify-content-center">
 
