--- a/templates/plusdesuggestions/index.html.twig
+++ b/templates/plusdesuggestions/index.html.twig
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{{ asset('css/suggestions.css') }}" type="text/css">
 {% endblock %}
 
-<div class="row liste container">
+<div class="row liste">
     {% for suggestion in suggestions %}
         <div class="card centrez" style="width: 18rem;">
             {% if suggestion.image is not null %}
