--- a/public/css/filmami_commun.css
+++ b/public/css/filmami_commun.css
@@ -64,6 +64,8 @@ footer {
 }
 footer a {
     color: white;
+    margin-right: 45px;
+    margin-left: 45px;
 }
 footer a:hover {
     color: #34547d;
