--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -127,16 +127,16 @@
 
     {#    footer html #}
     <footer>
-        <span><a title="Envoyez-nous un message !" class="double police" href="{{ path('app_index_contact') }}">Contactez-nous !</a></span>
+        <span><a title="Envoyez-nous un message !" class="double" href="{{ path('app_index_contact') }}">Contactez-nous !</a></span>
         <hr>
-        <span class="police">Nos réseaux sociaux :</span>
+        <span >Nos réseaux sociaux :</span>
         <div class="row">
-            <a title="Visitez notre page Twitter" href="https://twitter.com/"><img src="{{ asset('img/logo_twitter2.png') }}" alt="logo Twitter"></a>
-            <a title="Visitez notre page Instagram" href="https://www.instagram.com/"><img src="{{ asset('img/logo_instagram2.png') }}" alt="logo Instagram"></a>
-            <a title="Visitez notre page Facebook" href="https://www.facebook.com/"><img src="{{ asset('img/logo_facebook2.png') }}" alt="logo Facebook"></a>
+            <a title="Visitez notre page Twitter" href="https://twitter.com/"><img src="{{ asset('img/logo_twitter.png') }}" alt="logo Twitter"></a>
+            <a title="Visitez notre page Instagram" href="https://www.instagram.com/"><img src="{{ asset('img/logo_instagram.png') }}" alt="logo Instagram"></a>
+            <a title="Visitez notre page Facebook" href="https://www.facebook.com/"><img src="{{ asset('img/logo_facebook.png') }}" alt="logo Facebook"></a>
         </div>
         <hr>
-        <span class="police"> Copyright &copy;Filmami 2020</span>
+        <span> Copyright &copy;Filmami 2020</span>
     </footer>
 
 {% block javascripts %}
