push années utilisateur

--- a/templates/suggestion/profil.html.twig
+++ b/templates/suggestion/profil.html.twig
@@ -48,7 +48,7 @@
                             <!-------- L'âge renseigné ou non -------->
                             <div class="col p-1">
                                 {% if profilsuggestion.age is not null %}
-                                    Age <span class="txt">:</span>{{ profilsuggestion.age }}
+                                    Age <span class="txt">:</span>{{ profilsuggestion.age }} ans
                                 {% else %}
                                     Age <span class="txt">:</span> Non renseigné
                                 {% endif %}
